# qwen3_vl

./: .gitignore  README.md  benchmark.py  cache_fp8_kernel.py  context_sweep.py  download_models.py  evaluate_vl.py  generate_eval_fixtures.py  human_size.py  model_catalog.py  parity.py  pyproject.toml  qwen3_vl.py  qwen3_vl_offline.py  qwen3_vl_unsloth.py  reference_vl.py  requirements-container.txt  requirements-tested.txt  run_cpu_offline.py  run_gpu_fp8_offline.py  run_skill.py  run_vl_eval.py  skill_parsers.py  skills.py  verified_infer.py  web_ui.py
demo/: __init__.py  generation.py  grounding_3d_viz.py  grounding_viz.py  model_manager.py  server.py  sessions.py  tasks.py
demo/web/: index.html
docker/: Dockerfile  Dockerfile.cu12  Dockerfile.dockerignore  Dockerfile.vllm  README.md  build.sh  cache_fp8_kernel.py  run.sh  run_demo.sh
docs/: benchmarks.md  context_limits.md  cuda_stacks.md  skills.md  unsloth_regression.md
qwen3_vl/: __init__.py  benchmark.py  cache_fp8_kernel.py  cli.py  context_sweep.py  cuda_compat.py  download_models.py  human_size.py  model_catalog.py  parity.py  qwen3_vl_offline.py  reference_vl.py  run_cpu_offline.py  run_gpu_fp8_offline.py  run_skill.py  run_vl_eval.py  skill_parsers.py  skills.py
qwen3_vl_local_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
reports/: validation_2026-07-12.json
scripts/: bench_all_skills.sh  check_no_leaks.py  context_all_skills.sh  dataparallel_worker.py  extract_frames.py  launch_vllm_gr2.sh  regress_unsloth.py  test_skills_dataparallel.sh  test_skills_gr2.py
tests/: test_autolabel_skills.py  test_benchmark_context.py  test_cli.py  test_cli_web.py  test_config_patch.py  test_cuda_compat.py  test_demo_generation.py  test_demo_model_manager.py  test_demo_server.py  test_demo_tasks.py  test_docker_run.py  test_download_models.py  test_evaluate_vl.py  test_model_catalog.py  test_parity.py  test_reference_vl.py  test_run_vl_eval.py  test_runtime_behavior.py  test_sessions.py  test_skills.py  test_unsloth_pairs.py
