[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-vl-local-demo"
version = "0.2.0"
description = "Strict-offline Qwen3-VL Thinking FP8 CLI, Web UI, and benchmarks"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
qwen3-vl = "qwen3_vl:main"

[tool.setuptools]
py-modules = [
  "benchmark",
  "cache_fp8_kernel",
  "context_sweep",
  "download_models",
  "evaluate_vl",
  "generate_eval_fixtures",
  "model_catalog",
  "qwen3_vl",
  "qwen3_vl_offline",
  "parity",
  "reference_vl",
  "web_ui",
]
