[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-vl-local-demo"
version = "0.3.0"
description = "Strict-offline Qwen3-VL Thinking FP8 CLI, Web UI, and benchmarks"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
# The implementation moved to the ``qwen3_vl`` package; the console entry
# point dispatches to qwen3_vl.cli:main. Root-level shim modules keep
# `python3 benchmark.py` / `from skills import ...` working too.
qwen3-vl = "qwen3_vl.cli:main"

[tool.setuptools]
packages = ["qwen3_vl", "demo"]
py-modules = [
  "benchmark",
  "cache_fp8_kernel",
  "context_sweep",
  "download_models",
  "evaluate_vl",
  "generate_eval_fixtures",
  "human_size",
  "model_catalog",
  "parity",
  "qwen3_vl_offline",
  "reference_vl",
  "run_cpu_offline",
  "run_gpu_fp8_offline",
  "run_skill",
  "run_vl_eval",
  "skill_parsers",
  "skills",
]

[tool.setuptools.package-data]
demo = ["web/*.html"]
qwen3_vl = []
